# blazechunk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: README.md  chunkers.rs
docs/superpowers/specs/: 2026-07-19-embedding-chunkers-design.md
src/: embeddings.rs  lib.rs  token_counter.rs
src/chunkers/: code.rs  late.rs  mod.rs  recursive.rs  sdpm.rs  semantic.rs  sentence.rs  table.rs  token.rs
