[workspace]
members = [".", "packages/python"]

[package]
name = "chunk"
version = "0.10.3"
edition = "2024"
description = "The fastest semantic text chunking library — up to 1TB/s chunking throughput"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Deepchavda007/blazechunk"
readme = "README.md"
keywords = ["chunking", "text", "simd", "nlp", "tokenization"]
categories = ["text-processing", "algorithms"]
exclude = ["benches/data/*", "packages/*", "assets/*", "scripts/*", "*.png", "*.svg"]

[features]
default = []
hf-tokenizer = ["dep:tokenizers"]

[dependencies]
memchr = "2"
daggrs = "0.1"
tokenizers = { version = "0.21", optional = true, default-features = false, features = ["fancy-regex"] }

[dev-dependencies]
criterion = "0.5"
text-splitter = "0.18"
kiru = "0.1"

[[bench]]
name = "chunk"
harness = false

[[bench]]
name = "kiru"
harness = false

[[bench]]
name = "text_splitter"
harness = false

[[bench]]
name = "multi_pattern"
harness = false

[[bench]]
name = "chunkers"
harness = false
